--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "iosfwd": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "iostream": "cpp",
+        "vector": "cpp",
+        "ctime": "cpp"
     }
 }
